# hr-agent

./: .env.example  .gitignore  Procfile  README.md  hr.db  pyproject.toml  railway.toml  requirements.txt  vercel.json
app/: api_server.py
core/: hr_agent.py  mcp_hr_server.py
data/: README.txt  employees.csv
nextjs-integration/components/: HRChat.tsx
nextjs-integration/lib/: hr-api.ts
scripts/: health_check.py  ingest_employees.py  ingest_policies.py
